# effy

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  info.md  mypy.ini  pyproject.toml
.github/: main.workflow
.github/workflows/: code_checker.yml  codeql.yml  release.yml
adr/: 000-coding-standards.md  001-waterfall-loss-distribution.md  002-unit-normalisation.md  003-statistics-api-usage.md  004-overwrite-history.md  005-negative-loss-capping.md  006-live-update-strategy.md  007-total-increasing-live-delta.md  008-mixed-unit-comparability.md  009-low-resolution-kwh-smoothing.md  010-idle-energy-staleness-and-slot-timer.md  011-slot-timer-history-recalc.md  012-trapezoidal-energy-redistribution.md  013-late-binding-smoothing-push-and-zero-fill.md  014-larger-trapezoid-cap-and-staged-offline-lookback.md  015-skip-and-cache-offline-anchor-lookback.md  016-push-last-slot-value-as-live-state.md
custom_components/effy/: __init__.py  button.py  calculation.py  config_flow.py  const.py  coordinator.py  history.py  manifest.json  sensor.py  sensor_utils.py
custom_components/effy/translations/: de.json  en.json
disabled/: README.md  coordinator_live.py  test_coordinator_live.py
doc/: history-path.mmd  live-path.mmd
tests/: test_calculation.py  test_config_flow.py  test_coordinator_slot.py  test_sensor_utils.py
